...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="😠 Anger" />

            <com.google.android.material.chip.Chip
                android:id="@+id/confusion_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="🤔 Confusion" />

            <com.google.android.material.chip.Chip
                android:id="@+id/disgust_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
...

            <com.google.android.material.chip.Chip
                android:id="@+id/fear_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="😨 Fear" />

            <com.google.android.material.chip.Chip
                android:id="@+id/happiness_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="😄 Happy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sadness_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="☹️ Sad" />

            <com.google.android.material.chip.Chip
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/recent_week_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="Past Week" />

            <com.google.android.material.chip.Chip
...
                android:backgroundTint="@android:color/transparent"
                android:text="Reset Filters"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/apply_filters_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="Apply filters"
                android:textColor="@color/black"
...
