...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/user_pfp_req_follow"
        app:layout_constraintStart_toEndOf="@+id/request_follow"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_emotion_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:hint="select mood"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textSize="25dp" />

        <!--        <Spinner-->
        <!--            android:id="@+id/emotion_spinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Reason"
                android:padding="10dp" />
...
                android:layout_height="15sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="0"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <Spinner
                android:id="@+id/social_situation_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

        </LinearLayout>

...
