...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Emotion"
                android:textStyle="bold" />

...
        app:layout_constraintEnd_toEndOf="@+id/mood_details_box"
        app:layout_constraintStart_toStartOf="@+id/mood_details_box"
        app:layout_constraintTop_toBottomOf="@id/mood_details_box"
        tools:layout_editor_absoluteY="335dp">

        <Button
            android:id="@+id/edit_mood_button"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:focusable="false"
            android:minHeight="32sp"
...

            android:textColor="@color/raisin_black"

            android:textSize="10sp" />

        <Button
            android:id="@+id/delete_mood_button"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:focusable="false"
            android:minHeight="32sp"
...
